Implemented hacker new API integration; Feature list: - Asynchronously fetches and caches the stories from Hacker News API; - Three-tier architecture, separate class library for integrations and helper classes; - IDistributedCache for efficient caching across distributed systems; - Appsettings use for often updated data, like cache time, API Url or format; - Pre-fetching list of all stories on application start (just for our case with small data range); - Unit tests for validating correct response count; - Extension methods for converting one model to other across application layers; - Swagger for API Documentations.
Updated README.md file with solution info.

--- a/DCT/DCT.csproj
+++ b/DCT/DCT.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="ViewModels\" />
+    <ProjectReference Include="..\BLL\BLL.csproj" />
+    <ProjectReference Include="..\HackerNewsIntegration\HackerNewsIntegration.csproj" />
+    <ProjectReference Include="..\HttpClientHelper\HttpClientHelper.csproj" />
   </ItemGroup>
 
 </Project>
