--- a/DCT/appsettings.json
+++ b/DCT/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "HackerNewsOptions": {
+    "BaseUrl": "https://hacker-news.firebaseio.com/v0/",
+    "BestStoriesEndpoint": "beststories.json",
+    "ItemEndpoint": "item/{0}.json",
+    "CacheResponseForSeconds": 300
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
