--- a/HackerNewsIntegration/HackerNewsIntegration.csproj
+++ b/HackerNewsIntegration/HackerNewsIntegration.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\HttpClientHelper\HttpClientHelper.csproj" />
+  </ItemGroup>
+
 </Project>
